# scotland-yard-solver

./: .clang-tidy  CMakeLists.txt  compile_commands.json
.github/workflows/: build-code.yaml  check-code-format.yaml  lint-code.yaml  run-ci.yaml  run-tests.yaml
board-data/: bus_map.txt  ferry_map.txt  starting_positions.txt  taxi_map.txt  underground_map.txt
game-data/: detectives_starting_positions.txt  mr_x_tickets.txt
include/: initialize.h  input.h  types.h
information/: INPUT.md
src/: initialize.cpp  input.cpp  types.cpp
tests/cpp/: CMakeLists.txt  initialize_tests.cpp  input_tests.cpp  test  types_tests.cpp
